--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
 
       <!-- 3rd party deps specifically for this module -->
       <dependency>
+         <groupId>com.auth0</groupId>
+         <artifactId>mvc-auth-commons</artifactId>
+         <version>[1.0, 2.0)</version>
+      </dependency>
+      <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
          <version>2.13.2.1</version>
