--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
       <dependency>
          <groupId>com.auth0</groupId>
          <artifactId>mvc-auth-commons</artifactId>
-         <version>[1.0, 2.0)</version>
+         <version>1.9.2</version>
       </dependency>
       <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
