--- a/pom.xml
+++ b/pom.xml
@@ -62,11 +62,22 @@
          <scope>test</scope>
       </dependency>
 
+
       <!-- 3rd party deps specifically for this module -->
       <dependency>
          <groupId>info.picocli</groupId>
          <artifactId>picocli</artifactId>
          <version>4.6.1</version>
+      </dependency>
+      <dependency>
+         <groupId>info.picocli</groupId>
+         <artifactId>picocli-shell-jline3</artifactId>
+         <version>4.6.3</version>
+      </dependency>
+      <dependency>
+         <groupId>io.github.cdimascio</groupId>
+         <artifactId>java-dotenv</artifactId>
+         <version>5.2.2</version>
       </dependency>
       <dependency>
          <groupId>com.h2database</groupId>
