--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
 
       <!-- Common deps for all qqq modules -->
       <dependency>
+         <groupId>io.github.cdimascio</groupId>
+         <artifactId>java-dotenv</artifactId>
+         <version>5.2.2</version>
+      </dependency>
+      <dependency>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>3.1.2</version>
