--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
    <groupId>com.kingsrook.qqq</groupId>
    <artifactId>qqq-backend-core</artifactId>
-   <version>0.2.0-SNAPSHOT</version>
+   <version>0.2.0</version>
 
    <scm>
      <connection>scm:git:git@github.com:Kingsrook/qqq-backend-core.git</connection>
