--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-core</artifactId>
-         <version>0.2.0-20220726.214150-15</version>
+         <version>0.2.0</version>
       </dependency>
 
       <!-- 3rd party deps specifically for this module -->
