--- a/qqq-backend-core/pom.xml
+++ b/qqq-backend-core/pom.xml
@@ -23,29 +23,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
 
-   <groupId>com.kingsrook.qqq</groupId>
    <artifactId>qqq-backend-core</artifactId>
-   <version>0.3.0-SNAPSHOT</version>
 
-   <scm>
-     <connection>scm:git:git@github.com:Kingsrook/qqq-backend-core.git</connection>
-     <developerConnection>scm:git:git@github.com:Kingsrook/qqq-backend-core.git</developerConnection>
-     <tag>HEAD</tag>
-   </scm>
+   <parent>
+      <groupId>com.kingsrook.qqq</groupId>
+      <artifactId>qqq-parent-project</artifactId>
+      <version>${revision}</version>
+   </parent>
 
    <properties>
       <!-- props specifically to this module -->
-      <!-- none at this time -->
-
-      <!-- Common props for all qqq modules -->
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-      <maven.compiler.source>17</maven.compiler.source>
-      <maven.compiler.target>17</maven.compiler.target>
-      <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
-      <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
-      <coverage.haltOnFailure>true</coverage.haltOnFailure>
-      <coverage.instructionCoveredRatioMinimum>0.80</coverage.instructionCoveredRatioMinimum>
+      <!-- noe at this time -->
    </properties>
 
    <dependencies>
@@ -53,11 +41,6 @@
       <!-- none, this is core.  -->
 
       <!-- 3rd party deps specifically for this module -->
-      <dependency>
-         <groupId>com.auth0</groupId>
-         <artifactId>mvc-auth-commons</artifactId>
-         <version>1.9.2</version>
-      </dependency>
       <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
@@ -79,49 +62,48 @@
          <version>1.8</version>
       </dependency>
       <dependency>
-         <groupId>org.assertj</groupId>
-         <artifactId>assertj-core</artifactId>
-         <version>3.23.1</version>
-         <scope>test</scope>
-      </dependency>
-      <!-- generates Method objects from method references, used initially by QFieldMetaData to make fields from getter method refs  -->
-      <dependency>
+         <!-- generates Method objects from method references, used initially by QFieldMetaData to make fields from getter method refs -->
          <groupId>com.github.hervian</groupId>
          <artifactId>safety-mirror</artifactId>
          <version>4.0.1</version>
       </dependency>
-      <!-- excel library -->
       <dependency>
          <groupId>org.dhatim</groupId>
          <artifactId>fastexcel</artifactId>
          <version>0.12.15</version>
       </dependency>
-
-      <!-- Common deps for all qqq modules -->
+      <dependency>
+         <groupId>com.auth0</groupId>
+         <artifactId>mvc-auth-commons</artifactId>
+         <version>1.9.2</version>
+      </dependency>
       <dependency>
          <groupId>io.github.cdimascio</groupId>
          <artifactId>java-dotenv</artifactId>
          <version>5.2.2</version>
       </dependency>
+
+      <!-- Common deps for all qqq modules -->
       <dependency>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-checkstyle-plugin</artifactId>
-         <version>3.1.2</version>
       </dependency>
       <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-api</artifactId>
-         <version>2.17.1</version>
       </dependency>
       <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-core</artifactId>
-         <version>2.17.1</version>
       </dependency>
       <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-engine</artifactId>
-         <version>5.8.1</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.assertj</groupId>
+         <artifactId>assertj-core</artifactId>
          <scope>test</scope>
       </dependency>
 
@@ -129,176 +111,17 @@
 
    <build>
       <plugins>
-         <!-- plugins specifically for this module -->
-         <!-- none at this time -->
-
-         <!-- Common plugins for all qqq modules -->
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.8.1</version>
-            <configuration>
-               <compilerArgument>-Xlint:unchecked</compilerArgument>
-            </configuration>
-         </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0-M5</version>
-            <configuration>
-               <!-- Sets the VM argument line used when integration tests are run. -->
-               <argLine>@{jaCoCoArgLine}</argLine>
-            </configuration>
-         </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-checkstyle-plugin</artifactId>
-            <version>3.1.2</version>
-            <dependencies>
-               <dependency>
-                  <groupId>com.puppycrawl.tools</groupId>
-                  <artifactId>checkstyle</artifactId>
-                  <version>9.0</version>
-               </dependency>
-            </dependencies>
-            <executions>
-               <execution>
-                  <id>validate</id>
-                  <phase>validate</phase>
-                  <configuration>
-                     <configLocation>checkstyle.xml</configLocation>
-                     <!-- <suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation> -->
-                     <encoding>UTF-8</encoding>
-                     <consoleOutput>true</consoleOutput>
-                     <failsOnError>false</failsOnError>
-                     <failOnViolation>true</failOnViolation>
-                     <violationSeverity>warning</violationSeverity>
-                     <excludes>**/target/generated-sources/*.*</excludes>
-                     <!-- <linkXRef>false</linkXRef> -->
-                  </configuration>
-                  <goals>
-                     <goal>check</goal>
-                  </goals>
-               </execution>
-            </executions>
-         </plugin>
-         <plugin>
-            <groupId>com.amashchenko.maven.plugin</groupId>
-            <artifactId>gitflow-maven-plugin</artifactId>
-            <version>1.18.0</version>
-            <configuration>
-               <gitFlowConfig>
-                  <productionBranch>main</productionBranch>
-                  <developmentBranch>dev</developmentBranch>
-                  <versionTagPrefix>version-</versionTagPrefix>
-               </gitFlowConfig>
-               <skipFeatureVersion>true</skipFeatureVersion> <!-- Keep feature names out of versions -->
-               <postReleaseGoals>install</postReleaseGoals>  <!-- Let CI run deploys -->
-               <commitDevelopmentVersionAtStart>true</commitDevelopmentVersionAtStart>
-               <versionDigitToIncrement>1</versionDigitToIncrement> <!-- In general, we update the minor -->
-            </configuration>
-         </plugin>
          <plugin>
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
-            <version>0.8.8</version>
             <configuration>
                <excludes>
                   <exclude>com/kingsrook/qqq/backend/core/model/**/*.class</exclude>
                   <exclude>com/kingsrook/qqq/backend/core/exceptions/**/*.class</exclude>
                </excludes>
             </configuration>
-            <executions>
-               <execution>
-                  <id>pre-unit-test</id>
-                  <goals>
-                     <goal>prepare-agent</goal>
-                  </goals>
-                  <configuration>
-                     <propertyName>jaCoCoArgLine</propertyName>
-                  </configuration>
-               </execution>
-               <execution>
-                  <id>unit-test-check</id>
-                  <goals>
-                     <goal>check</goal>
-                  </goals>
-                  <configuration>
-                     <!-- Gives us the ability to pass a parameter to not fail due to coverage E.g. -Dcoverage.haltOnFailure=false -->
-                     <haltOnFailure>${coverage.haltOnFailure}</haltOnFailure>
-                     <rules>
-                        <rule>
-                           <element>BUNDLE</element>
-                           <limits>
-                              <limit>
-                                 <counter>INSTRUCTION</counter>
-                                 <value>COVEREDRATIO</value>
-                                 <minimum>${coverage.instructionCoveredRatioMinimum}</minimum>
-                              </limit>
-                           </limits>
-                        </rule>
-                     </rules>
-                  </configuration>
-               </execution>
-               <execution>
-                  <id>post-unit-test</id>
-                  <phase>verify</phase>
-                  <goals>
-                     <goal>report</goal>
-                  </goals>
-               </execution>
-            </executions>
-         </plugin>
-         <plugin>
-            <artifactId>exec-maven-plugin</artifactId>
-            <groupId>org.codehaus.mojo</groupId>
-            <version>3.0.0</version>
-            <executions>
-               <execution>
-                  <id>test-coverage-summary</id>
-                  <phase>verify</phase>
-                  <goals>
-                     <goal>exec</goal>
-                  </goals>
-                  <configuration>
-                     <executable>sh</executable>
-                     <arguments>
-                        <argument>-c</argument>
-                        <argument>
-                           <![CDATA[
-echo "Element\nInstructions Missed\nInstruction Coverage\nBranches Missed\nBranch Coverage\nComplexity Missed\nComplexity Hit\nLines Missed\nLines Hit\nMethods Missed\nMethods Hit\nClasses Missed\nClasses Hit\n" > /tmp/$$.headers
-xpath -q -e '/html/body/table/tfoot/tr[1]/td/text()' target/site/jacoco/index.html > /tmp/$$.values
-echo
-echo "Jacoco coverage summary report:"
-echo "   See also target/site/jacoco/index.html"
-echo "   and https://www.jacoco.org/jacoco/trunk/doc/counters.html"
-echo "------------------------------------------------------------"
-paste /tmp/$$.headers /tmp/$$.values | tail +2 | awk -v FS='\t' '{printf("%-20s %s\n",$1,$2)}'
-rm /tmp/$$.headers /tmp/$$.values
-                           ]]>
-                        </argument>
-                     </arguments>
-                  </configuration>
-               </execution>
-            </executions>
          </plugin>
       </plugins>
    </build>
-
-   <repositories>
-      <repository>
-         <id>github-qqq-maven-registry</id>
-         <name>GitHub QQQ Maven Registry</name>
-         <url>https://maven.pkg.github.com/Kingsrook/qqq-maven-registry</url>
-      </repository>
-   </repositories>
-
-   <distributionManagement>
-      <repository>
-         <id>github-qqq-maven-registry</id>
-         <name>GitHub QQQ Maven Registry</name>
-         <url>https://maven.pkg.github.com/Kingsrook/qqq-maven-registry</url>
-      </repository>
-   </distributionManagement>
 
 </project>
