--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,22 +10,18 @@ orbs:
   slack: circleci/slack@4.10.1
 
 commands:
-  run_maven:
-    parameters:
-      maven_subcommand:
-        default: test
-        type: string
+  mvn_verify:
     steps:
       - checkout
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "pom.xml" }}
       - run:
-          name: Run Maven
+          name: Run Maven Verify
           command: |
-            mvn -s .circleci/mvn-settings.xml << parameters.maven_subcommand >>
+            mvn -s .circleci/mvn-settings.xml verify
       - store_artifacts:
-          path: target/site/jacoco
+          path: */target/site/jacoco
       - run:
           name: Save test results
           command: |
@@ -39,22 +35,34 @@ commands:
             - ~/.m2
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
+  mvn_jar_deploy:
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "pom.xml" }}
+      - run:
+          name: Run Maven Jar Deploy
+          command: |
+            mvn -s .circleci/mvn-settings.xml jar:jar deploy:deploy
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: v1-dependencies-{{ checksum "pom.xml" }}
+
 jobs:
   mvn_test:
     executor: java17
     steps:
-      - run_maven:
-          maven_subcommand: verify
+      - mvn_verify:
       - slack/notify:
           event: fail
 
   mvn_deploy:
     executor: java17
     steps:
-      - run_maven:
-          maven_subcommand: verify
-      - run_maven:
-          maven_subcommand: jar:jar deploy:deploy
+      - mvn_verify:
+      - mvn_jar_deploy:
       - slack/notify:
           event: always
 
