--- a/qqq-backend-core/pom.xml
+++ b/qqq-backend-core/pom.xml
@@ -103,6 +103,11 @@
          <version>0.12.15</version>
       </dependency>
       <dependency>
+         <groupId>org.dhatim</groupId>
+         <artifactId>fastexcel-reader</artifactId>
+         <version>0.18.4</version>
+      </dependency>
+      <dependency>
          <groupId>org.apache.poi</groupId>
          <artifactId>poi</artifactId>
          <version>5.2.5</version>
@@ -112,6 +117,14 @@
          <artifactId>poi-ooxml</artifactId>
          <version>5.2.5</version>
       </dependency>
+
+      <!-- adding to help FastExcel -->
+      <dependency>
+         <groupId>commons-io</groupId>
+         <artifactId>commons-io</artifactId>
+         <version>2.16.0</version>
+      </dependency>
+
       <dependency>
          <groupId>com.auth0</groupId>
          <artifactId>auth0</artifactId>
