--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
    </modules>
 
    <properties>
-      <revision>0.23.0</revision>
+      <revision>0.24.0-SNAPSHOT</revision>
 
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
